# CRM

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  SUMMARY.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: __init__.py  activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
app/api/v1/schemas/: __init__.py  activity.py  auth.py  contact.py  deal.py  organization.py  task.py
app/core/: exceptions.py  permissions.py  security.py
app/models/: __init__.py  activity.py  contact.py  deal.py  organization.py  task.py  user.py
app/repositories/: __init__.py  activity_repository.py  base.py  contact_repository.py  deal_repository.py  organization_repository.py  task_repository.py  user_repository.py
app/services/: __init__.py  activity_service.py  analytics_service.py  auth_service.py  contact_service.py  deal_service.py  task_service.py
tests/: README.md  conftest.py
tests/integration/: test_analytics.py  test_auth.py  test_contacts.py  test_deals.py  test_full_scenario.py  test_tasks.py
tests/unit/: test_deal_service.py  test_permissions.py  test_validators.py
